Modified verification message banner to use same styling as cookies. Added snooze button to prevent problems dismissing on mobile.

--- a/scss/_ru.scss
+++ b/scss/_ru.scss
@@ -106,6 +106,7 @@ table {
             margin-bottom: 10px;
         }
     }
+
 }
 label {
     color: #000;
@@ -135,28 +136,7 @@ select {
     display: none;
     z-index: 999;
 }
-.verification-message{
-    .row {
-        height:50px;
-        .verification-content{
-            position: relative;
-            height:100%;
-            width:90%;
-            text-align: center;
-            p{
-                font-size: 1.3em;
-                font-weight: normal;
-                font-family: "Exo 2","Helvetica Neue","Helvetica",Helvetica,Arial,sans-serif;
-                margin: 0;
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                margin-right: -50%;
-                transform: translate(-50%, -50%)
-            }
-        }
-    }
-}
+
 input.error.submitted,
 input.ru-input-error {
     border-color: #cc6666;
